feat: Basic func

--- a/alembic.ini
+++ b/alembic.ini
@@ -5,7 +5,7 @@
 script_location = src/main/resource/alembic
 
 ;sqlalchemy.url = driver://user:pass@localhost:port/dbname
-sqlalchemy.url = sqlite+aiosqlite:///src/main/resource/alembic/db/fast_web.db
+sqlalchemy.url = mysql+aiomysql://root:123456@localhost:3306/zeta
 ;sqlalchemy.url = postgresql+asyncpg://user:pass@localhost:port/dbname
 ;sqlalchemy.url = mysql+aiomysql://root:pass@localhost:3306/dbname
 
