--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,17 +31,9 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "aiosqlite>=0.21",
-  "alembic>=1.15.2",
-  "cryptography>=45.0.6",
-  "diskcache>=5.6.3",
-  "fastapi[standard]>=0.115.12",
-  "loguru>=0.7.3",
-  "openpyxl>=3.1.5",
-  "pandas>=2.2.3",
-  "passlib[bcrypt]>=1.7.4",
-  "pyjwt>=2.10.1",
-  "sqlmodel>=0.0.24",
+  "aiomysql>=0.3.2",
+  "akshare>=1.17.85",
+  "fastlib-py>=0.3.4",
 ]
 
 [dependency-groups]
