--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
   "aiomysql>=0.3.2",
   "akshare>=1.17.85",
   "fastlib-py>=0.3.4",
+  "matplotlib>=3.9.4",
+  "seaborn>=0.13.2",
 ]
 
 [dependency-groups]
